# MSU_STARX_EMG_Feature_Toolkit

./: README.md
Intrinsic Documentation/html/: _absolute_value_of_the_summation_of_exp_root_8cpp.html  _absolute_value_of_the_summation_of_square_root_8cpp.html  _average_amplitude_change_8cpp.html  _average_energy_8cpp.html  _cardinality_8cpp.html  _coefficient_of_variation_8cpp.html  _difference_absolute_mean_value_8cpp.html  _difference_absolute_standard_deviation_value_8cpp.html  _difference_variance_value_8cpp.html  _enhanced_mean_absolute_value_8cpp.html  _enhanced_wave_length_8cpp.html  _integrated_e_m_g_8cpp.html  _interquartile_range_8cpp.html  _kurtosis_8cpp.html  _log_coefficient_of_variation_8cpp.html  _log_detector_8cpp.html  _log_difference_absolute_mean_value_8cpp.html  _log_difference_absolute_standard_deviation_value_8cpp.html  _log_teager_kaiser_energy_operator_8cpp.html  _maximum_fractal_length_8cpp.html  _mean_absolute_deviation_8cpp.html  _mean_absolute_value_8cpp.html  _mean_value_of_the_square_root_8cpp.html  _modified_mean_absolute_value2_8cpp.html  _modified_mean_absolute_value_8cpp.html  _myopulse_percentage_rate_8cpp.html  _new_zero_crossing_8cpp.html  _root_mean_square_8cpp.html  _simple_square_integral_8cpp.html  _skewness_8cpp.html  _slope_sign_change_8cpp.html  _standard_deviation_8cpp.html  _temporal_moment_8cpp.html  _v_order_8cpp.html  _variance_8cpp.html  _variance_of_e_m_g_8cpp.html  _waveform_length_8cpp.html  _willison_amplitude_8cpp.html  _zero_crossing_8cpp.html  annotated.html  (+15 more)
Intrinsic Documentation/latex/: _absolute_value_of_the_summation_of_exp_root_8cpp.tex  _absolute_value_of_the_summation_of_square_root_8cpp.tex  _average_amplitude_change_8cpp.tex  _average_energy_8cpp.tex  _cardinality_8cpp.tex  _coefficient_of_variation_8cpp.tex  _difference_absolute_mean_value_8cpp.tex  _difference_absolute_standard_deviation_value_8cpp.tex  _difference_variance_value_8cpp.tex  _enhanced_mean_absolute_value_8cpp.tex  _enhanced_wave_length_8cpp.tex  _integrated_e_m_g_8cpp.tex  _interquartile_range_8cpp.tex  _kurtosis_8cpp.tex  _log_coefficient_of_variation_8cpp.tex  _log_detector_8cpp.tex  _log_difference_absolute_mean_value_8cpp.tex  _log_difference_absolute_standard_deviation_value_8cpp.tex  _log_teager_kaiser_energy_operator_8cpp.tex  _maximum_fractal_length_8cpp.tex  _mean_absolute_deviation_8cpp.tex  _mean_absolute_value_8cpp.tex  (+24 more)
example/: main.cpp
source/: emgToolbox.h
unitTest/: CMakeLists.txt  unitTest.cc
(+47 files in other folders)
